--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <style>
+      .styled {
+        border: 0;
+        line-height: 2.5;
+        padding: 0 30px;
+        font-size: 1rem;
+        margin-left: 50px;
+        text-align: center;
+        color: #fff;
+        text-shadow: 1px 1px 1px #000;
+        border-radius: 10px;
+        background-color: rgb(0, 139, 220);
+        background-image: linear-gradient(
+          to top left,
+          rgb(0 0 0 / 20%),
+          rgb(0 0 0 / 20%) 30%,
+          rgb(0 0 0 / 0%)
+        );
+        box-shadow: inset 2px 2px 3px rgb(255 255 255 / 60%),
+          inset -2px -2px 3px rgb(0 0 0 / 60%);
+      }
+
+      .styled:hover {
+        background-color: rgb(4, 97, 38);
+      }
+
+      .styled:active {
+        box-shadow: inset -2px -2px 3px rgb(255 255 255 / 60%),
+          inset 2px 2px 3px rgb(0 0 0 / 60%);
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -20,7 +51,7 @@
               alt="Logo"
               width="30"
               class="d-inline-block align-text-top"
-              style="border-radius: 50%;"
+              style="border-radius: 50%"
             />
             <strong>Aerial.Vue - Task Submission Site</strong>
           </a>
@@ -52,10 +83,124 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <button type="button" class="btn btn-primary">
+                  <button type="button" class="styled">
                     <a class="nav-link active" href="#">Home</a>
                   </button>
                 </li>
+                <br />
+                <li class="nav-item">
+                  <button
+                    type="button"
+                    class="styled"
+                    style="padding: 0 30px;"
+                    data-bs-toggle="modal"
+                    data-bs-target="#About"
+                  >
+                    About
+                  </button>
+                </li>
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="About"
+                  tabindex="-1"
+                  aria-labelledby="AboutLabel"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="AboutLabel">About</h1>
+                        <button
+                          type="button"
+                          class="btn-close"
+                          data-bs-dismiss="modal"
+                          aria-label="Close"
+                        ></button>
+                      </div>
+                      <div class="modal-body">
+                        Aerial.Vue is an Online Software Training Organization
+                        that operates Mainly on
+                        <a href="http://github.com">GitHub</a>
+                        from October 2024 & Encourage Collaboration of Like-Minded Individuals.
+                        <br />
+                        Mainly Focussing on:
+                        <ul>
+                          <li>Web & Application Development</li>
+                          <li>Structured Programming</li>
+                          <li>Management</li>
+                          <li>Research & Innovation</li>
+                          <li>Documentaion & Presentation</li>
+                        </ul>
+
+                        Our Aim is to Enhance the Skills of Students With Active Participation.
+                        <br>
+                        This Official Task Submission Form is Deployed by Aerial.Vue to Store Trainees' Submissions.
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="styled"
+                          style="background-color: pink; color: #000"
+                          data-bs-dismiss="modal"
+                        >
+                          Close
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <br />
+                <li class="nav-item">
+                  <button
+                    type="button"
+                    class="styled"
+                    style="padding: 0 30px;"
+                    data-bs-toggle="modal"
+                    data-bs-target="#ContactUs"
+                  >
+                    Contact Us
+                  </button>
+                </li>
+                <div
+                class="modal fade"
+                id="ContactUs"
+                tabindex="-1"
+                aria-labelledby="ContactUsLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="ContactUsLabel">Contact Us</h1>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body">
+                      <ol>
+                        <li>GitHub: <a href="https://github.com/Aerial-Vue">Aerial.Vue</a></li>
+                        <li>LinkedIn: <a href="https://www.linkedin.com/company/aerial-vue-corporation/">Aerial.Vue</a></li>
+                        <li>Instagram: <a href="https://www.instagram.com/aerial.vue">Aerial.Vue</a></li>
+                        <li>E-mail: <a href="mailto:artsematics.edu@gmail.com">Aerial.Vue</a></li>
+                      </ol>
+                      
+                    </div>
+                    <div class="modal-footer">
+                      <button
+                        type="button"
+                        class="styled"
+                        style="background-color: pink; color: #000"
+                        data-bs-dismiss="modal"
+                      >
+                        Close
+                      </button>
+                    </div>
+                  </div>
+                </div>
               </ul>
             </div>
           </div>
@@ -173,27 +318,25 @@
       <br />
       <button
         type="button"
-        class="btn btn-primary"
+        class="styled"
         data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
+        data-bs-target="#Submit"
       >
         Submit
       </button>
-      <button type="reset" class="btn btn-primary" id="resetButton">
-        Reset
-      </button>
+      <button type="reset" class="styled" id="resetButton">Reset</button>
 
       <div
         class="modal fade"
-        id="exampleModal"
+        id="Submit"
         tabindex="-1"
-        aria-labelledby="exampleModalLabel"
+        aria-labelledby="SubmitLabel"
         aria-hidden="true"
       >
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Form Submitted</h5>
+              <h5 class="modal-title" id="SubmitLabel">Form Submitted</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -210,7 +353,8 @@
             <div class="modal-footer">
               <button
                 type="button"
-                class="btn btn-secondary"
+                class="styled"
+                style="background-color: pink; color: #000"
                 data-bs-dismiss="modal"
               >
                 Close
